@@ -1,9 +1,13 @@
 # Duck-Hunt
 Recreation of the Duck Hunt atari game in Java. Given as the first year assignment in Hacettepe University.
 
-Run the program using:
+Compilation & Execution:
 
-1) javac *.java or javac DuckHunt.java
-2) java DuckHunt.java
-
-in an environment where JavaFX is installed.
+1) Open cmd.
+2) Navigate to the src folder with "cd src"
+3) javac --module-path "path to the lib folder of your javafx sdk"
+ --add-modules javafx.controls,javafx.graphics,javafx.media DuckHunt.java 
+ to compile the project.
+4) java --module-path "path to the lib folder of your javafx sdk" 
+--add-modules javafx.controls,javafx.graphics,javafx.media DuckHunt.java
+to run the project.
